added remover of jpgs

--- a/TransformadorPDF_imagem(FUNCIONANDO).ipynb
+++ b/TransformadorPDF_imagem(FUNCIONANDO).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,6 @@
     }
    ],
    "source": [
-    "tempo = temp.tempdir()\n",
     "dir = r\"C:\\Users\\jvict\\Documents\\seven\\NOVEMBRO_2023\\NOVEMBRO\\NOTAS FISCAIS NOVEMBRO\\nfs-e\"\n",
     "fileExt = r\".pdf\"\n",
     "for foto in os.listdir(dir):\n",
@@ -108,12 +107,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20/11/2023 48.750.524/0001-26 41.248.067/0001-27 13.320,00 00000015 GVRV-LGDR AAC.jpg\n",
+      "20/11/2023 48.750.524/0001-26 41.248.067/0001-27 13.320,00 00000015 GVRV-LGDR AAC_AUGUSTO.jpg\n",
+      "08/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 9UCQ-ZAJG ATAK.jpg\n",
+      "Codigo 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 None CENTURY_MACEIO.jpg\n",
+      "06/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 Servigo CITEL_JATIUCA_IMPLANTAÇÃO.jpg\n",
+      "06/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 Servigo CITEL_JATIUCA_MENSALIDADE.jpg\n",
+      "06/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 Servigo CITEL_MACEIO.jpg\n",
+      "06/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 Servico CITEL_MATRIZ.jpg\n",
+      "06/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 Servigo CITEL_OLINDA.jpg\n",
+      "06/11/2023 05.535.402/0001-04 41.248.067/0005-50 198,91 00040266 Servigo CITEL_PETROLINA.jpg\n",
+      "06/11/2023 45.030.463/0001-34 41.248.067/0001-27 220,00 00000387 FN15-EXKT DESENROLA-MATRIZ.jpg\n",
+      "06/11/2023 45.030.463/0001-34 41.248.067/0002-08 220,00 00000386 XM5M-H3XU DESENROLA_ARAPIRACA.jpg\n",
+      "06/11/2023 45.030.463/0001-34 41.248.067/0003-99 220,00 00000388 GYVK-IEMB DESENROLA_MACEIO.jpg\n",
+      "08/11/2023 45.030.463/0001-34 41.248.067/0005-50 220,00 00000392 TMS9-QACX DESENROLA_OLINDA.jpg\n",
+      "06/11/2023 45.030.463/0001-34 41.248.067/0004-70 220,00 00000391 NW3F-RULP DESENROLA_PETROLINA.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0002-08 250,00 00000896 UYGV-XBFW NF_DMS_FBS COMERCIO DE TINTAS LTDA_ARAPIRACA_0896_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0003-99 250,00 00000899 9K74-TRFB NF_DMS_FBS COMERCIO DE TINTAS LTDA_FAROL_0899_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0006-31 250,00 00000902 YIQR-DMIX NF_DMS_FBS COMERCIO DE TINTAS LTDA_JATIUCA_0902_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0008-01 250,00 00000898 YIAS-XBPU NF_DMS_FBS COMERCIO DE TINTAS LTDA_JPA_TORRE_0898_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0007-12 250,00 00000897 NCAG-7N6J NF_DMS_FBS COMERCIO DE TINTAS LTDA_MANAIRA_0897_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0005-50 250,00 00000900 AJB7-CEK6 NF_DMS_FBS COMERCIO DE TINTAS LTDA_OLINDA_0900_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000901 Q6IE-DJCR NF_DMS_FBS COMERCIO DE TINTAS LTDA_PETROLINA_0901_50% INICIAL.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000205 Servico NS INFORMATICA JATIUCA.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000205 Servico NS INFORMATICA MACEIO.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000205 Servico NS INFORMATICA OLINDA.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000205 Servico NS INFORMATICA PETROLINA.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000205 Servico NS INFORMATICA_ARAPIRACA.jpg\n",
+      "24/11/2023 21.053.554/0001-27 41.248.067/0004-70 250,00 00000205 Servico NS INFORMATICA_MATRIZ.jpg\n",
+      "24/11/2023 47.866.934/0001-74 41.248.067/0003-99 250,00 MUNICIPIO None VANCOUVER_SERV_22_11_2023.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "fileExt = r\".jpg\" \n",
-    "for image in os.listdir(r'C:\\Users\\jvict\\Documents\\seven'):\n",
+    "for image in os.listdir(r\"C:\\Users\\jvict\\Documents\\seven\\seven\"):\n",
     "    if image.endswith(fileExt) or image.endswith('JPG') :\n",
     "      try:\n",
     "          pytesseract.pytesseract.tesseract_cmd = path + r'/tesseract.exe'\n",
@@ -179,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +264,101 @@
     "\n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AAC.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AAC_AUGUSTO.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AF ENEGENHARIA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AF ENGENHARIA1281.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\ATAK.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CENTURY_ARAPIRACA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CENTURY_MACEIO.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_ARAPIRACA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_JATIUCA_IMPLANTAÇÃO.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_JATIUCA_MENSALIDADE.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_MACEIO.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_MATRIZ.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_OLINDA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_PETROLINA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CONTRATO CONSULTORIA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CONTRATO CONSULTORIA_655_TODAS AS LOJAS.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CONTRATO CONSULTORIA_MANAIRA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA-MATRIZ.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_ARAPIRACA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_MACEIO.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_OLINDA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_PETROLINA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\FONOCLIN.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\MEGATRON.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\MONTEIRO CONSULTORIA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF VFS_PETROLINA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_ARAPIRACA_0896_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_BOA_VIAGEM_0895_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_FAROL_0899_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_JATIUCA_0902_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_JPA_TORRE_0898_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_MANAIRA_0897_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_OLINDA_0900_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_PETROLINA_0901_50% INICIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NOTA FISCAL_MEGATRON.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA JATIUCA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA MACEIO.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA OLINDA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA PETROLINA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA_ARAPIRACA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA_MATRIZ.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\PRODUTIVA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\THIAGO LOJA OLINDA_30_11.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\THIAGO_FRETE LOJA MATRIZ.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\THIAGO_LOJA MATRIZ.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_ARAPIRACA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA  TORRE 1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA  TORRE 2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA MANAIRA 2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA MANAIRA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MACEIO FAROL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MACEIO JATIUCA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MATRIZ1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MATRIZ2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_OLINDA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_PETROLINA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\VANCOUVER_SERV_22_11_2023.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\VFS SISTEMA_JATIUCA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\VFS SISTEMA_MATRIZ.jpg\n",
+      "JPG files removed successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_jpg_files(folder_path):\n",
+    "    try:\n",
+    "        # List all files in the specified folder\n",
+    "        files = os.listdir(folder_path)\n",
+    "\n",
+    "        # Filter and remove JPG files\n",
+    "        for file in files:\n",
+    "            if file.lower().endswith(\".jpg\"):\n",
+    "                file_path = os.path.join(folder_path, file)\n",
+    "                os.remove(file_path)\n",
+    "                print(f\"Removed: {file_path}\")\n",
+    "\n",
+    "        print(\"JPG files removed successfully.\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "# Replace 'your_folder_path' with the actual path of the folder containing the JPG files\n",
+    "folder_path = r\"C:\\Users\\jvict\\Documents\\seven\\seven\"\n",
+    "remove_jpg_files(folder_path)"
    ]
   },
   {
