--- a/TransformadorPDF_imagem(FUNCIONANDO).ipynb
+++ b/TransformadorPDF_imagem(FUNCIONANDO).ipynb
@@ -17,85 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAC.pdf\n",
-      "AAC_AUGUSTO.pdf\n",
-      "AF ENEGENHARIA.pdf\n",
-      "AF ENGENHARIA1281.pdf\n",
-      "ATAK.pdf\n",
-      "CENTURY_ARAPIRACA.pdf\n",
-      "CENTURY_MACEIO.pdf\n",
-      "CITEL_ARAPIRACA.pdf\n",
-      "CITEL_JATIUCA_IMPLANTAÇÃO.pdf\n",
-      "CITEL_JATIUCA_MENSALIDADE.pdf\n",
-      "CITEL_MACEIO.pdf\n",
-      "CITEL_MATRIZ.pdf\n",
-      "CITEL_OLINDA.pdf\n",
-      "CITEL_PETROLINA.pdf\n",
-      "CONTRATO CONSULTORIA.pdf\n",
-      "CONTRATO CONSULTORIA_655_TODAS AS LOJAS.pdf\n",
-      "CONTRATO CONSULTORIA_MANAIRA.pdf\n",
-      "DESENROLA-MATRIZ.pdf\n",
-      "DESENROLA_ARAPIRACA.pdf\n",
-      "DESENROLA_MACEIO.pdf\n",
-      "DESENROLA_OLINDA.pdf\n",
-      "DESENROLA_PETROLINA.pdf\n",
-      "FONOCLIN.pdf\n",
-      "MEGATRON.pdf\n",
-      "MONTEIRO CONSULTORIA.pdf\n",
-      "NF VFS_PETROLINA.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_ARAPIRACA_0896_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_BOA_VIAGEM_0895_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_FAROL_0899_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_JATIUCA_0902_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_JPA_TORRE_0898_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_MANAIRA_0897_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_OLINDA_0900_50% INICIAL.pdf\n",
-      "NF_DMS_FBS COMERCIO DE TINTAS LTDA_PETROLINA_0901_50% INICIAL.pdf\n",
-      "NOTA FISCAL_MEGATRON.pdf\n",
-      "NS INFORMATICA JATIUCA.pdf\n",
-      "NS INFORMATICA MACEIO.pdf\n",
-      "NS INFORMATICA OLINDA.pdf\n",
-      "NS INFORMATICA PETROLINA.pdf\n",
-      "NS INFORMATICA_ARAPIRACA.pdf\n",
-      "NS INFORMATICA_MATRIZ.pdf\n",
-      "PRODUTIVA.pdf\n",
-      "THIAGO LOJA OLINDA_30_11.pdf\n",
-      "THIAGO_FRETE LOJA MATRIZ.pdf\n",
-      "THIAGO_LOJA MATRIZ.pdf\n",
-      "TICKET_ARAPIRACA.pdf\n",
-      "TICKET_JOAO PESSOA  TORRE 1.pdf\n",
-      "TICKET_JOAO PESSOA  TORRE 2.pdf\n",
-      "TICKET_JOAO PESSOA MANAIRA 2.pdf\n",
-      "TICKET_JOAO PESSOA MANAIRA.pdf\n",
-      "TICKET_MACEIO FAROL.pdf\n",
-      "TICKET_MACEIO JATIUCA.pdf\n",
-      "TICKET_MATRIZ1.pdf\n",
-      "TICKET_MATRIZ2.pdf\n",
-      "TICKET_OLINDA.pdf\n",
-      "TICKET_PETROLINA.pdf\n",
-      "VANCOUVER_SERV_22_11_2023.pdf\n",
-      "VFS SISTEMA_JATIUCA.pdf\n",
-      "VFS SISTEMA_MATRIZ.pdf\n"
+      "[05230009002822]LOJA28ENERGISA.pdf\n",
+      "[06198619000139]LOJA17ENERGISA.pdf\n",
+      "[06198619000724]LOJA33ENERGISA.pdf\n",
+      "[06198619001704]LOJA31ENERGISA.pdf\n",
+      "[06198619002000]LOJA42ENERGISA.pdf\n",
+      "[06198619003740]LOJA60ENERGISA.pdf\n",
+      "[06198619004711]LOJA 36CELPE.pdf\n",
+      "[06198619005106]LOJA 38EQUATORIAL.pdf\n",
+      "[06198619006170]LOJA74ENERGISA.pdf\n",
+      "[06198619006250]LOJA65ENERGISA.pdf\n",
+      "[06198619008547]LOJA151CELPE.pdf\n",
+      "[06198619009608]LOJA163CELPE.pdf\n"
      ]
     }
    ],
    "source": [
-    "dir = r\"C:\\Users\\jvict\\Documents\\seven\\NOVEMBRO_2023\\NOVEMBRO\\NOTAS FISCAIS NOVEMBRO\\nfs-e\"\n",
+    "dir = r\"C:/Users/jvict/Documents/seven/teste equatori\"\n",
     "fileExt = r\".pdf\"\n",
     "for foto in os.listdir(dir):\n",
     "    if (foto.endswith(fileExt)):\n",
     "        diret = f\"{dir}\\{foto}\"\n",
     "        print(foto)\n",
     "        nome = foto.replace('.pdf','')+'.jpg'\n",
-    "        images = convert_from_path(pdf_path= diret, poppler_path=r\"C:\\Program Files\\poppler-23.11.0\\Library\\bin\", \n",
-    "                                   output_folder=r\"C:\\Users\\jvict\\Documents\\seven\\NOVEMBRO_2023\\NOVEMBRO\\NOTAS FISCAIS NOVEMBRO\\nfs-e\", fmt= 'jpg',output_file= nome)\n",
+    "        images = convert_from_path(pdf_path= diret, poppler_path=r\"C:\\Program Files\\poppler-23.11.0\\Library\\bin\", fmt= 'jpg',output_file= nome)\n",
     "        \n",
     "        path = r'C:/Program Files/Tesseract-OCR'\n",
     "        images[0].save(nome)\n",
@@ -214,52 +166,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Codigo Ver 04.307.281/0001-80 41.248.067/0003-99 263,00 Compaen SECRETARIA MUNICIPAL DE ECONOMIA Compaen\n"
+      "G 174743- Abril/2021\n",
+      "\n",
+      "@enercaisa\n",
+      "\n",
+      "ROTEIRO: 007 - 0006 - 504 - 4460\n",
+      "MATRICULA: 42467-2023-11-8\n",
+      "\n",
+      "DOM. BANC.:\n",
+      "\n",
+      "DOM. ENT:\n",
+      "\n",
+      "Classificago: MTC-CONVENCIONAL BAIXA TENSAO / B3\n",
+      "\n",
+      "COMERCIAL / OUTROS SERVICOS E OUTRAS ATIVIDADES\n",
+      "\n",
+      "LIGAGAO: TRIFASICO\n",
+      "\n",
+      "TENSAO NOMINAL EM VOLTS _DISP: Lim. Min.: 380 Lim. Max.: 399\n",
+      "COMERCIAL DRUGSTORE LTDA\n",
+      "AV PRES EPITACIO PESSOA, 402 - 8040000 CODIGO DO CLIENTE\n",
+      "TORRE 5/42467-1\n",
+      "JOAO PESSOA (AG: 1)\n",
+      "CODIGO DA INSTALAGAO\n",
+      "\n",
+      "CNPJ/CPF/RANI: OX.XXX.XXX/XXX8-22_\n",
+      "Insc. Est.: 161XXXXXX W7034801514\n",
+      "\n",
+      "REF: MES / ANO VENCIMENTO TOTAL A PAGAR\n",
+      "\n",
+      "Novembro / 2023 26/12/2023 R$ 5.626,69\n",
+      "\n",
+      "Data de Apresentagao: 20/11/2023\n",
+      "Cadastre sua Fatura em Débito Automatico.\n",
+      "\n",
+      "Utilize 0 Cédigo: 0000042467-1\n",
+      "Lei Leit 2\n",
+      "pc\n",
+      "Datas de Leitura\n",
+      "Leituras | 44/10/2023 13/11/2023 33 13/12/2023\n",
+      "\n",
+      "NOTA FISCAL N°: 002.128.740 - Série: 002\n",
+      "DATA DE EMISSAO:14/11/2023\n",
+      "\n",
+      "Consulte pela Chave de Acesso em:\n",
+      "https://dfe-portal.svrs.rs.gov.brinf3e/consulta\n",
+      "chave de acesso:\n",
+      "\n",
+      "2523 1109 0951 8300 0140 6600 2002 1287 4010 7194\n",
+      "1770\n",
+      "\n",
+      "Protocolo de Autorizacao:\n",
+      "32523000216087117 - 14/11/2023 13:45:00\n",
+      "\n",
+      "~\"Problemas com alcoolismo? Nés podemos ajudar — Ligue: (83) 3222-4557 / 9 8658-4556\" - Alcodlicos Anénimos na Paraiba\n",
+      "\n",
+      "Prego unit (R$) Pis/ Base Calc. % Aliq. icms Tarifa) Base de Aliquota Valor\n",
+      "Hens da Fatura Unid. Quant. comtributos Valor (R$) COFINS (R$) _ICMS (R$) ICMS. (RS) Unit (Rs) | Tuto Calc(R$)__(%) (RS)\n",
+      "Consumo em kWh KWH 6.82600 0,770370 5.25859 201,50 5.25859. 18 946,54 0,602190 one ee ee ae\n",
+      "\n",
+      "LANCAMENTOS E SERVIGOS aa :\n",
+      "CONTRIB SERV.ILUM.PUBLICA 368,10 0,00 000 0 0,00 IMS i\n",
+      "\n",
+      "Ne DIAS\n",
+      "\n",
+      "CONSUMO FATURADO FAT\n",
+      "\\ov23 28\n",
+      "ur 33\n",
+      "E123 29\n",
+      "02 28\n",
+      "Uw 28\n",
+      "Nn 33\n",
+      "23 31\n",
+      "A823 as 29\n",
+      "VAR 23 32\n",
+      "V3 30\n",
+      "N23 33\n",
+      "0222 29\n",
+      "V2? 29\n",
+      "\n",
+      "TOTAL: 5.62669 201,50 5.258,59 946,54\n",
+      "Medidor Grandezas Postos Leitura Leitura Const Consumo RESERVADO AO FISCO\n",
+      "horérios Anterior tual Medidor kWh\n",
+      "W7034801514 Energia ativa em kWh Ponta 222466 229292 1 6826 Art. 13, Inciso VII do RICMS/PB - 1997\n",
+      "\n",
+      "MATRICULA\n",
+      "42467-2023-11-8\n",
+      "\n",
+      "NOTA FISCAL/CONTA DE ENERGIA ELETRICA\n",
+      "\n",
+      "VENCIMENTO\n",
+      "26/12/2023\n",
+      "\n",
+      "FATURA A SER QUITADA ATRAVES DE DEBITO AUTOMATICO\n",
+      "CONSIDERAR ESTA NOTA FISCAL QUITADA SOMENTE APOS O EFETIVO DEBITO\n",
+      "\n",
+      "NO BANCO 0356\n",
+      "\n",
+      "N° FATURA\n",
+      "2128740\n",
+      "\n",
+      "TOTAL A PAGAR\n",
+      "R$ 5.626,69\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "\n",
     "path = r'C:/Program Files/Tesseract-OCR'\n",
-    "imagem = cv2.imread(r\"C:/Users/jvict/Documents/seven/NOVEMBRO_2023/NOVEMBRO/NOTAS FISCAIS NOVEMBRO/nfs-e/CENTURY_MACEIO.jpg0001-1.jpg\")\n",
+    "imagem = cv2.imread(r\"C:/Users/jvict/Documents/seven/seven/[05230009002822]LOJA28ENERGISA.jpg\")\n",
     "pytesseract.pytesseract.tesseract_cmd = path + r'/tesseract.exe'\n",
     "texto = pytesseract.image_to_string(imagem)\n",
     "\n",
-    "lines = texto.split('\\n')\n",
-    "cont = 0\n",
-    "tik = 0\n",
-    "deh=False\n",
-    "for line in lines:\n",
-    "    cont = cont+1\n",
-    "    \n",
-    "    if cont == 2:\n",
-    "        cod_ver = line\n",
-    "    if deh == True:\n",
-    "        data = line[0:10]\n",
-    "        deh = False\n",
-    "    if 'Data e Hora de Emissao' in line:\n",
-    "        deh = True   \n",
-    "        \n",
-    "    if 'CNPJ/CPF:' in line:\n",
-    "        if tik == 0:\n",
-    "            cnpj_prestador = line.split(' ')[1]\n",
-    "        tik = tik+1\n",
-    "        cnpj_tomador = line.split(' ')[1]\n",
-    "    if 'Valor Total' in line:\n",
-    "        valor = line.split(':')[1]\n",
-    "    if 'SECRETARIA MUNICIPAL DE ECONOMIA' in line:\n",
-    "        n_nota = line.split(' ')[-1]\n",
-    "    \n",
-    "    if 'Céddigo Verificagao' in line:\n",
-    "        cont = 0\n",
-    "print(data,cnpj_prestador,cnpj_tomador,valor,n_nota,cod_ver)\n",
+    "print(texto)\n",
     "\n",
     "\n",
     "    \n",
@@ -268,73 +296,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AAC.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AAC_AUGUSTO.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AF ENEGENHARIA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\AF ENGENHARIA1281.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\ATAK.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CENTURY_ARAPIRACA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CENTURY_MACEIO.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_ARAPIRACA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_JATIUCA_IMPLANTAÇÃO.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_JATIUCA_MENSALIDADE.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_MACEIO.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_MATRIZ.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_OLINDA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CITEL_PETROLINA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CONTRATO CONSULTORIA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CONTRATO CONSULTORIA_655_TODAS AS LOJAS.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\CONTRATO CONSULTORIA_MANAIRA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA-MATRIZ.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_ARAPIRACA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_MACEIO.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_OLINDA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\DESENROLA_PETROLINA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\FONOCLIN.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\MEGATRON.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\MONTEIRO CONSULTORIA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF VFS_PETROLINA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_ARAPIRACA_0896_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_BOA_VIAGEM_0895_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_FAROL_0899_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_JATIUCA_0902_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_JPA_TORRE_0898_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_MANAIRA_0897_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_OLINDA_0900_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NF_DMS_FBS COMERCIO DE TINTAS LTDA_PETROLINA_0901_50% INICIAL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NOTA FISCAL_MEGATRON.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA JATIUCA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA MACEIO.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA OLINDA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA PETROLINA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA_ARAPIRACA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\NS INFORMATICA_MATRIZ.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\PRODUTIVA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\THIAGO LOJA OLINDA_30_11.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\THIAGO_FRETE LOJA MATRIZ.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\THIAGO_LOJA MATRIZ.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_ARAPIRACA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA  TORRE 1.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA  TORRE 2.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA MANAIRA 2.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_JOAO PESSOA MANAIRA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MACEIO FAROL.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MACEIO JATIUCA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MATRIZ1.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_MATRIZ2.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_OLINDA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\TICKET_PETROLINA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\VANCOUVER_SERV_22_11_2023.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\VFS SISTEMA_JATIUCA.jpg\n",
-      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\VFS SISTEMA_MATRIZ.jpg\n",
-      "JPG files removed successfully.\n"
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[05230009002822]LOJA28ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[05230009002822]LOJA28ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[05230009002822]LOJA28ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619000139]LOJA17ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619000139]LOJA17ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619000139]LOJA17ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619000724]LOJA33ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619000724]LOJA33ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619000724]LOJA33ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619001704]LOJA31ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619001704]LOJA31ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619001704]LOJA31ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619002000]LOJA42ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619002000]LOJA42ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619002000]LOJA42ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619003740]LOJA60ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619003740]LOJA60ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619003740]LOJA60ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619004711]LOJA 36CELPE.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619004711]LOJA 36CELPE.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619004711]LOJA 36CELPE.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619005106]LOJA 38EQUATORIAL.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619005106]LOJA 38EQUATORIAL.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619006170]LOJA74ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619006170]LOJA74ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619006170]LOJA74ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619006250]LOJA65ENERGISA.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619006250]LOJA65ENERGISA.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619006250]LOJA65ENERGISA.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619008547]LOJA151CELPE.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619008547]LOJA151CELPE.jpg0001-1.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619008547]LOJA151CELPE.jpg0001-2.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619009608]LOJA163CELPE.jpg\n",
+      "Removed: C:\\Users\\jvict\\Documents\\seven\\seven\\[06198619009608]LOJA163CELPE.jpg0001-1.jpg\n",
+      "Error: [WinError 32] O arquivo já está sendo usado por outro processo: 'C:\\\\Users\\\\jvict\\\\Documents\\\\seven\\\\seven\\\\[06198619009608]LOJA163CELPE.jpg0001-2.jpg'\n"
      ]
     }
    ],
