--- a/leitor_dos_arquivos_edsson.ipynb
+++ b/leitor_dos_arquivos_edsson.ipynb
@@ -11,14 +11,14 @@
     "#n_f52transf_jpajabjpa (deve funcionar mas só 1 file)\n",
     "#n_fs1718jaymejosedelimajunio (deve funcionar mas só 2 file)\n",
     "#nfs_henrique_roberval_josrogrio funcionando<<\n",
-    "#nfs_jarbiana não_funcionando\n",
+    "#nfs_jarbiana não_funcionando <<<<<<<<MAS TA LENDO>>>>>>>>\n",
     "#nfsref2quinzenadezembro2023 tem que ser feito com o leitor de imagem\n",
     "#ren_fs535455e56edvaldodesouzasilvajunior funcionando <<<"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,25 +260,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'chave' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[41], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mdir\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mjvict\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDocuments\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mseven\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mseven\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mnfs_jarbiana\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mleitor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mdir\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[37], line 45\u001b[0m, in \u001b[0;36mleitor\u001b[1;34m(dir)\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNúmerodaNFS\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m line:\n\u001b[0;32m     44\u001b[0m         nfs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 45\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mchave\u001b[49m,cnpj_prestador,cnpj_tomador,valor_servico,numero_nota)\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'chave' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PREFEITURA DE CARUARU Número da\n",
+      "SECRETARIA DE NEGOCIOS DA FAZENDA NFS-e\n",
+      "NOTA FISCAL ELETRÔNICA DE SERVIÇO - NFS-e 654\n",
+      "Código de Verificação\n",
+      "Data e Hora da Emissão 02/01/2024 13:56:10 Competência 2/1/2024 1XGSXWOYN\n",
+      "No. da NFS-e substituída\n",
+      "Número do RPS Local da Prestação CARUARU - PE\n",
+      "Dados do Prestador de Serviços\n",
+      "Razão Social/Nome JARBIANA CRISTINA DE ASSIS B SILVA\n",
+      "Nome Fantasia\n",
+      "CNPJ/CPF 33.037.636/0001-67 Inscrição Municipal 90609971 Município CARUARU - PE\n",
+      "Endereço e Cep Rua Independência ,8 - Kennedy CEP: 55036-180\n",
+      "Complemento: Telefone: 81995550812 e-mail: multicontape@gmail.com\n",
+      "Dados do Tomador de Serviços\n",
+      "Razão Social/Nome PROGRESSO LOGISTICA E TRANSPORTE LTDA\n",
+      "CNPJ/CPF 10.580.938/0001-81 Inscrição Municipal Município JABOATAO DOS GUARARAPES - PE\n",
+      "Endereço e CEP RUA OITENTA ,100 - CURADO CEP: 54270-165\n",
+      "Complemento: QD - B; LT- 01; A - 08; Telefone: (81)2121-9000 e-mail: SECRETARIA@ADTSA.COM.BR\n",
+      "Discriminação dos Serviços\n",
+      "Referente a 1 viagem Jab x Mcz x Jab, 1 viagem Jab x Nat x Jab e 1 viagem Jab x Mcz x Aju x Mcz x Jab.\n",
+      "Semana 24 a 31/12/2023.\n",
+      "Veículo KFJ-1331\n",
+      "Código do Serviço / Atividade\n",
+      "16.02 / 493020100 - TRANSPORTE RODOVIÁRIO DE CARGA, EXCETO PRODUTOS PERIGOSOS E MUDANÇAS, MUNICIPAL\n",
+      "Detalhamento Específico da Construção Civil\n",
+      "Código da Obra Código ART\n",
+      "Tributos Federais\n",
+      "PIS COFINS IR(R$) INSS(R$) CSLL(R$)\n",
+      "Detalhamento de Valores - Prestador dos Serviços Outras Retenções Cálculo do ISSQN devido no Município\n",
+      "Valor dos Serviços R$ 6.705,00 Natureza Operação Valor dos Serviços R$ 6.705,00\n",
+      "(-) Deduções permitidas em lei\n",
+      "(-) Desconto Incondicionado 1-Tributação no município\n",
+      "(-) Desconto Condicionado Regime especial Tributação (-) Desconto Incondicionado\n",
+      "(-) Retenções Federais 0,00 0-Nenhum Base de Cálculo 6.705,00\n",
+      "Outras Retenções Opção Simples Nacional (x) Alíquota % 2,00\n",
+      "1 - Sim\n",
+      "(-) ISS Retido 0,00 ISS a reter: ( ) Sim (X) Não\n",
+      "Incentivador Cultura\n",
+      "(=) Valor Líquido R$ 6.705,00 (=) Valor do ISS: R$ 0,00\n",
+      "2-Não\n",
+      "1- Uma via desta Nota Fiscal será enviada através do e-mail fornecido pelo Tomador dos Serviços.\n",
+      "2- A autenticidade desta Nota Fiscal poderá ser verificada no site, CARUARU.ginfes.com.br com a utilização do Código de Verificação.\n",
+      "Avisos 3 - Documento emitido por ME ou EPP optante pelo Simples Nacional.Não gera direito a crédito fiscal de ISS e IPI.\n"
      ]
     }
    ],
    "source": [
-    "dir = r\"C:\\Users\\jvict\\Documents\\seven\\seven\\nfs_jarbiana\"\n",
-    "leitor(dir)"
+    "dir = r\"C:\\Users\\jvict\\Documents\\seven\\seven\\nfs_jarbiana\\654.pdf\"\n",
+    "with pdfplumber.open(dir)as pdf:\n",
+    "            text = \"\"\n",
+    "            for page in pdf.pages:\n",
+    "                text += page.extract_text()\n",
+    "                a = text\n",
+    "                lines = a.split('\\n')\n",
+    "                for line in lines:\n",
+    "                    print(line)"
    ]
   },
   {
